<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Rojo"
    android:foregroundTint="#303233"
    android:orientation="vertical">

    <include layout="@layout/appbar"></include>

    <include
        android:id="@+id/include4"
        layout="@layout/bottomappbar"></include>


    <Button
        android:id="@+id/tituloMarcoFormulario"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/Amarillo"
        android:clickable="false"
        android:text="@string/metasPersoFormularioTxtTitulo"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/Negro"
        android:textSize="18sp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toTopOf="@+id/fondoCuestionario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fondoCuestionario"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:alpha="0.8"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/Amarillo"
        app:layout_constraintBottom_toTopOf="@+id/obtenerMetasPersoBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloMarcoFormulario" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LayoutPesoInput"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/pesoHint"
        android:textColorHint="@color/Blanco"
        android:translationZ="10dp"
        app:layout_constraintBottom_toTopOf="@+id/LayyoutAlturaInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fondoCuestionario">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:translationZ="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LayyoutAlturaInput"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/alturaHint"
        android:textColorHint="@color/Blanco"
        android:translationZ="10dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayoutMetasPers1"
        app:layout_constraintEnd_toEndOf="@+id/fondoCuestionario"
        app:layout_constraintStart_toStartOf="@+id/fondoCuestionario"
        app:layout_constraintTop_toBottomOf="@+id/LayoutPesoInput">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:translationZ="10dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutMetasPers1"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="25dp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayoutMetasPers2"
        app:layout_constraintEnd_toEndOf="@+id/fondoCuestionario"
        app:layout_constraintStart_toStartOf="@+id/fondoCuestionario"
        app:layout_constraintTop_toBottomOf="@+id/LayyoutAlturaInput">

        <Spinner
            android:id="@+id/sexoSpinnerMetasPer"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:entries="@array/sexo"
            android:spinnerMode="dropdown"
            android:translationZ="10dp" />

        <Spinner
            android:id="@+id/añosSpinnerMetasPer"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:entries="@array/añosNacimiento"
            android:translationZ="10dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutMetasPers2"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="@+id/fondoCuestionario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayoutMetasPers1">

        <Spinner
            android:id="@+id/diasSpinnerMetasPer"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="0dp"
            android:entries="@array/diaDelMes" />

        <Spinner
            android:id="@+id/mesesSpinnerMetasPer"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="1dp"
            android:entries="@array/mesesDelAño"
            android:translationZ="10dp" />

    </RelativeLayout>

    <Button
        android:id="@+id/obtenerMetasPersoBtn"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="130dp"
        android:alpha="0.7"
        android:background="@color/Amarillo"
        android:onClick="onClickObtenerMetas"
        app:layout_constraintBottom_toBottomOf="@+id/include4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fondoCuestionario" />

    <ImageView
        android:id="@+id/imagenObtenerMetasPerso"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="311dp"
        android:contentDescription="@string/obtenerMetasPersoDescription"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/obtenerMetasPersoBtn"
        app:layout_constraintEnd_toEndOf="@+id/obtenerMetasPersoBtn"
        app:layout_constraintStart_toStartOf="@+id/obtenerMetasPersoBtn"
        app:layout_constraintTop_toTopOf="@+id/obtenerMetasPersoBtn"
        app:srcCompat="@drawable/metasperso" />

    <TextView
        android:id="@+id/obtenerMetasPersoTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/obtenerMetasPersonalizadas"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/Blanco"
        android:textSize="20sp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/obtenerMetasPersoBtn"
        app:layout_constraintStart_toEndOf="@+id/imagenObtenerMetasPerso"
        app:layout_constraintTop_toTopOf="@+id/obtenerMetasPersoBtn" />

    <ImageView
        android:id="@+id/blurryImage6"
        android:layout_width="684dp"
        android:layout_height="652dp"
        android:layout_marginBottom="55dp"
        android:alpha="0.2"
        android:contentDescription="@string/blurryImageDescripcion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/applogo" />


</androidx.constraintlayout.widget.ConstraintLayout>