<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Rojo"
    android:foregroundTint="#303233"
    android:orientation="vertical">

...
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/logoDescripcion"
            android:translationZ="10dp"
...
        <TextView
            android:id="@+id/tituloScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="15dp"
            android:text="@string/registrarme"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/Blanco"
            android:textStyle="bold"
            android:translationZ="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
...
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/registrarmeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputPasswdLayout2"
        app:layout_constraintVertical_bias="0.014">

...
