<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/item3"
        android:icon="@drawable/applogo"
        android:onClick="onOptionsItemSelected"
        android:title="@string/menuItemAppLogo"
        app:showAsAction="always"></item>
</menu>
