...

    <include layout="@layout/appbar"></include>
    <include layout="@layout/bottomappbar"></include>


    <Button
        android:id="@+id/opcion1RecordatoriosVerBtn"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="220dp"
        android:layout_marginBottom="10dp"
        android:alpha="0.9"
        android:background="@color/Amarillo"
        android:onClick="onClickVerListaOpcion"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/Blanco"
        app:layout_constraintBottom_toTopOf="@+id/opcion2RecordatoriosAddBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/opcion1RecordatoriosTxt"
...
